@@ -10724,6 +10724,7 @@ boost/libs/wave/test/testwave/testfiles/t_9_015.cpp svneol=native#text/plain
 boost/libs/wave/test/testwave/testfiles/t_9_016.cpp svneol=native#text/plain
 boost/libs/wave/test/testwave/testfiles/t_9_016.hpp svneol=native#text/plain
 boost/libs/wave/test/testwave/testfiles/t_9_017.cpp svneol=native#text/plain
+boost/libs/wave/test/testwave/testfiles/t_9_018.cpp svneol=native#text/plain
 boost/libs/wave/test/testwave/testfiles/test.cfg -text
 boost/libs/wave/test/testwave/testwave.cpp svneol=native#text/plain
 boost/libs/wave/test/testwave/testwave_app.cpp svneol=native#text/plain
